smoof 1.6
=========

* Added bi-objective BBOB problem generator: makeBiObjBBOBFunction

smoof 1.5.1
===========

* logging and couting wrapper now have class smoof_function
* Fixed: convertTo{Minimization,Maximization} now flips sign of optima
* Better handling of additional arguments in makeFunctionsByName
* Added Shekel function
* Added inverted Vincent function
* Added modified Rastrigin function
* Added Hartmann{3,4,6} functions

smoof 1.5
=========

* Added shortcuts {s,m}nof for generating single-/multi-objective objective functionswith numeric parameters only
* Added: missing single-objective tag for BBOB functions
* Added: log.scale argument for autoplot
* Added: CITATION file
* Fixed: precision issue caused by rPython respectively RJSONIO::toJSON, which by
  default strips numeric values to only 4 digits.
* Fixed: ggplot2 warnings
* Fixed: wrong lower bound in MOP3 test function
* Fixed: issue in definition of Cosine Mixture Function due to faulty online sources
* Fixed: issue with min<->max conversion if functions has.simple.signature = FALSE and explicit return statement was used.
* Fixed: mean function was not set properly for noisy functions
* Improved docs slighly

smoof 1.4
=========

* Added makeGOMOPFunction to create multi-objective test function based on a set of
  single objective functions.
* Added new single-objective functions: Branin (modified version by Forrester et al. (2008))
* Added new multi-objective functions: Van Valedhuizen's test suite (MOP1-7), Binh-Korn function,
  BiSphere (bi-objective Sphere), Dent function, Viennet function.
* Added first mixed parameter space funtion: Zhou2011
* visualizeParetoOptimalFront now draws lines instead of points
* Added possibility to draw interactive 3D surface plots via smoof::plot3D(fn, package = "plotly")
* Fixed: issue in formula and global optimum of BukinN2 function
* overworked and refactored autoplot functions