@@ -168,6 +168,7 @@ export(makeJennrichSampsonFunction)
 export(makeJudgeFunction)
 export(makeKeaneFunction)
 export(makeKearfottFunction)
+export(makeKursaweFunction)
 export(makeLeonFunction)
 export(makeMOP1Function)
 export(makeMOP2Function)
